Fix homepage takeunder overflow issue

--- a/static/css/section/_homepage.scss
+++ b/static/css/section/_homepage.scss
@@ -519,6 +519,7 @@ body.homepage .row-featured {
   padding-left: 0;
   padding-right: 0;
   margin-top: -20px;
+  overflow: hidden;
 
   @media only screen and (min-width : $breakpoint-medium) {
     padding-left: 20px;
